updated ISelect Interface and replaced DataManager module to fix an error and sorted funktionality into packets