@@ -35,6 +35,14 @@
             <build>
                 <plugins>
                     <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.1.2</version>
+                    <configuration>
+                        <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+                    </configuration>
+                </plugin>
+                    <plugin>
                         <artifactId>maven-clean-plugin</artifactId>
                         <version>3.3.2</version>
                         <configuration>
